force-app/main/default/objects/MarketingHierarchy__c/MarketingHierarchy__c.object-meta.xml
<CustomObject>
    <label>Marketing Hierarchy</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Marketing Hierarchy</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>