force-app/main/default/objects/MarketingHierarchy__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Marketing Hierarchy</relationshipLabel>
    <relationshipName>Marketing_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>