force-app/main/default/objects/MarketingHierarchy__c/fields/MarketingMainTable__c.field-meta.xml
<CustomField>
    <fullName>MarketingMainTable__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Marketing: Main Table</label>
    <referenceTo>MarketingMainTable__c</referenceTo>
    <relationshipLabel>Marketing Hierarchy</relationshipLabel>
    <relationshipName>Marketing_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>