force-app/main/default/objects/MarketingHierarchy__c/fields/Parent__c.field-meta.xml
<CustomField>
    <fullName>Parent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent</label>
    <referenceTo>MarketingHierarchy__c</referenceTo>
    <relationshipLabel>Marketing Hierarchy</relationshipLabel>
    <relationshipName>Marketing_Hierarchy</relationshipName>
    <type>Lookup</type>
</CustomField>