force-app/main/default/objects/MarketingHierarchy__c/fields/ParentId__c.field-meta.xml
<CustomField>
    <fullName>ParentId__c</fullName>
    <label>ParentId</label>
    <length>80</length>
    <type>Text</type>
</CustomField>