force-app/main/default/objects/MarketingHierarchy__c/fields/ProductConsumption__c.field-meta.xml
<CustomField>
    <fullName>ProductConsumption__c</fullName>
    <label>Product`s consumption</label>
    <length>80</length>
    <type>Text</type>
</CustomField>