force-app/main/default/objects/MarketingHierarchy__c/fields/Segment__c.field-meta.xml
<CustomField>
    <fullName>Segment__c</fullName>
    <formula>CASE (TEXT(MarketSegment__c),
&apos;00001&apos;, &apos;Americas&apos;,
&apos;00002&apos;, &apos;MENA&apos;,
&apos;00004&apos;, &apos;Europe&apos;,
&apos;00005&apos;, &apos;IPS&apos;,
&apos;00006&apos;, &apos;KLW&apos;,
&apos;00010&apos;, &apos;CIS&apos;,
&apos;00011&apos;, &apos;Ukraine&apos;,
&apos;00016&apos;, &apos;Customs Union&apos;,
&apos;00019&apos;, &apos;Vallourec&apos;,
&apos;00020&apos;, &apos;ETA&apos;,
&apos;00021&apos;, &apos;Machinery&apos;,
&apos;&apos;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Segment</label>
    <type>Text</type>
</CustomField>