force-app/main/default/objects/MarketingHierarchy__c/fields/YEAR__c.field-meta.xml
<CustomField>
    <fullName>YEAR__c</fullName>
    <formula>MarketingMainTable__r.strYEAR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YEAR</label>
    <type>Text</type>
</CustomField>