force-app/main/default/objects/MarketingHierarchy__c/fields/YES_NO__c.field-meta.xml
<CustomField>
    <fullName>YES_NO__c</fullName>
    <label>YES/NO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>