force-app/main/default/objects/MarketingHierarchy__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Level__c</columns>
    <columns>MarketSegment__c</columns>
    <columns>YEAR__c</columns>
    <columns>MarketingMainTable__c</columns>
    <columns>Parent__c</columns>
    <columns>ParentId__c</columns>
    <columns>ProductConsumption__c</columns>
    <columns>YES_NO__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>